- Did some changes to window. - Made it more clear. - Hopefully several windows with scenes work. - Added professional comments - Changed some vscode settings to make the formating look better - Seperated the scenes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   //make files need a tab and not spaces
+  "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: Google, TabWidth: 2, ColumnLimit: 200}",
   "[makefile]": {
     "editor.insertSpaces": false,
     "editor.tabSize": 4
